@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2013-05-31
+ * Added tenant() and tenant_db() methods to Wing.pm.
+
 2013-05-30
  * Added the --do option to wing db.
  * Added the wing tenant plugin
